--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
   "name": "ember-test-helpers",
+  "namespace": "EmberTestHelpers",
   "version": "0.0.1",
-  "description": "",
-  "main": "dist/commonjs/main.js",
-  "directories": {
-    "lib": "lib"
-  },
+  "description": "A group of ember test helpers for isolated unit tests using qunit",
+  "author": "Steffan Penner",
+  "license": "MIT",
   "devDependencies": {
+    "brfs": "0.0.8",
     "grunt": "~0.4.2",
-    "grunt-browserify": "~1.2.12",
+    "grunt-browserify": "~1.2.11",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-jshint": "~0.7.0",
+    "grunt-contrib-qunit": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-es6-module-transpiler": "~0.6.0",
-    "grunt-mocha-phantomjs": "~0.3.2",
-    "grunt-mocha-test": "~0.5.0",
+    "grunt-es6-module-transpiler": "~0.5.0",
+    "jshint": "~0.9",
     "grunt-s3": "~0.2.0-alpha.2",
-    "jshint": "~2.4.2",
     "load-grunt-config": "~0.5.0",
     "load-grunt-tasks": "~0.2.0",
-    "mocha-phantomjs": "~3.1.6",
-    "connect-redirection": "0.0.1",
-    "grunt-contrib-yuidoc": "~0.5.0",
-    "grunt-release-it": "0.0.3"
+    "connect-redirection": "0.0.1"
   },
   "scripts": {
     "test": "grunt test",
     "lint": "jshint lib",
     "prepublish": "grunt build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+  "keywords": [
+    "test",
+    "ember"
+  ]
 }
